Updated backend to add more situations for simulation
