# swagger.yaml
@@ -123,6 +123,31 @@ paths:
                 $ref: '#/definitions/Package'
         '405':
           description: Was not able to get history
+    post:
+      tags:
+        - Mongo Database
+      summary: Gets all packages that do not have a dispatchId
+      description: >-
+        This endpoint can be used when wanting to get the packages that do not have a dispatchId for a simulation
+      operationId: noDispatchPackages
+      produces:
+        - application/json
+      parameters:
+          - in: body
+            name: packageParamters
+            description: package parameters to send to db for query
+            required: true
+            schema:
+              $ref: '#/definitions/PackageQuery'
+      responses:
+        '200':
+          description: Got Packages.
+          schema: 
+            type: array
+            items:
+                $ref: '#/definitions/Package'
+        '405':
+          description: Was not able to get history
   /simulate:
     post:
       tags:
@@ -294,6 +319,22 @@ definitions:
         type: string
       dateCreated:
         type: date
+
+  PackageQuery:
+    type: object
+    properties: 
+      startDate:
+        type: date
+      endDate:
+        type: date
+      originPost: 
+        type: string
+      destinationPost:
+        type: string
+      dateCreated:
+        type: date
+      packageType:
+        type: string
 
   UpdateSettlement:
     type: object
